Include the ported files into the regular scalajavatime project